# govsearch

./: .gitattributes  .gitignore  .lfsconfig  Dockerfile  Makefile  README.md  biome.json  codegen.ts  components.json  config.jsonnet  docker-compose.vespa.yml  docker-compose.yml  env.d.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  tsconfig.scripts.json  vite.config.ts
.gitignore.d/: Local.gitignore
backend/: __init__.py  cache.py  data.py  graphql.py  logger.py  resolver.py  settings.py
backend_vespa/: Makefile  pom.xml
backend_vespa/multilingual-e5-small/: model.onnx  tokenizer.json
backend_vespa/multilingual-e5-small-quantized/: model_quantized.onnx  ort_config.json  special_tokens_map.json  tokenizer_config.json
backend_vespa/src/main/application/: services.xml  validation-overrides.xml
backend_vespa/src/main/application/model/: multilingual-e5-small-tokenizer.json
data/: 000936301.csv  000936301.jsonl  000936301_lf.csv  000936301_normalized.jsonl  000936301_q.json
frontend/: entry.client.tsx  entry.server.tsx  root.tsx
frontend/components/: answer-list.tsx  answer-summary.tsx  qa-help.tsx  qa.tsx  question-search.tsx
frontend/components/ui/: badge.tsx  button.tsx  command.tsx  dialog.tsx  scroll-area.tsx  separator.tsx  tooltip.tsx
frontend/lib/: urql.ts
frontend/routes/: _index.tsx  sentry-example-page.tsx
public/: site.webmanifest
schema/: graphql_qa.graphql
scripts/: convert-csv-to-json.py  export-hf-model-from-hf.py  model-quantizer.py  start-container.sh
(+1 files in other folders)
